added endpoint to generate scoreboard code sequence

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.liquibase.change-log=classpath:db/changelog/master-change-log.xml
 spring.datasource.url=jdbc:postgresql://localhost:40018/queue_db
 spring.datasource.username=queue_user
 spring.datasource.password=SoxnWOnYbm6k5P452Uv5WL2v0b5ENj
+
+mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.configuration.default-fetch-size=100
+mybatis.configuration.default-statement-timeout=30
